--- a/src/Api/AdvertBundle/Resources/config/routing.yml
+++ b/src/Api/AdvertBundle/Resources/config/routing.yml
@@ -14,14 +14,6 @@ api_advert_city:
     resource: "@ApiAdvertBundle/Resources/config/routing/city.yml"
     prefix:   /city
 
-advert_category:
-    path:     /list-advert-category/{category}
-    defaults: { _controller: "ApiAdvertBundle:Advert:advertCategory" }
-
-advert_city:
-    path:     /list-advert-city/{city}
-    defaults: { _controller: "ApiAdvertBundle:Advert:advertCity" }
-
-advert_city_category:
-    path:     /list-advert/{city}/{category}
-    defaults: { _controller: "ApiAdvertBundle:Advert:advertCityCategory" }
+api_advert_api:
+    resource: "@ApiAdvertBundle/Resources/config/routing/api.yml"
+    prefix:   /api
