--- a/src/Api/AdvertBundle/Resources/config/routing/advert.yml
+++ b/src/Api/AdvertBundle/Resources/config/routing/advert.yml
@@ -22,3 +22,15 @@ advert_delete:
     path:     /{id}/delete
     defaults: { _controller: "ApiAdvertBundle:Advert:delete" }
     methods:  [DELETE]
+
+advert_category:
+    path:     /list-advert-category/{category}
+    defaults: { _controller: "ApiAdvertBundle:Advert:advertCategory" }
+
+advert_city:
+    path:     /list-advert-city/{city}
+    defaults: { _controller: "ApiAdvertBundle:Advert:advertCity" }
+
+advert_city_category:
+    path:     /list-advert/{city}/{category}
+    defaults: { _controller: "ApiAdvertBundle:Advert:advertCityCategory" }
